--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<H1>Name & Surname Portfolio</H1>
+	<H1>Madison Blackgrove Portfolio</H1>
 	<h2>Proposal</h2>
 	<p>embed code here</p>
 	<h2>Design</h2>
