--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<H1>Madison Blackgrove Portfolio</H1>
 	<h2>Proposal</h2>
-	<p>embed code here</p>
+	<p><a href="https://drive.google.com/file/d/15wRdgVH_Whcakfh1BjUEhTTOg6ROq5es/view?usp=sharing">madisons inquiry</a></p>
 	<h2>Design</h2>
 	<p>embed code here</p>
 	<h2>Outcome</h2>
